--- a/BasketBallSim/.godot/editor/project_metadata.cfg
+++ b/BasketBallSim/.godot/editor/project_metadata.cfg
@@ -16,3 +16,10 @@ scenes=["res://main.tscn", "res://basketball.tscn"]
 
 RigidBody3D:scale=true
 Node3D:scale=true
+Camera3D:scale=true
+CharacterBody3D:scale=true
+
+[dialog_bounds]
+
+project_settings=Rect2(612, 282, 1800, 1400)
+create_new_node=Rect2(612, 282, 1800, 1400)
